# link_verifier

./: .gitignore  Makefile  README.md  dune-project  gleam.toml  link_verifier  link_verifier.opam  manifest.toml
.github/workflows/: release.yml  test.yml
docs/adr/: 0001-ocaml-rewrite.md
lib/: dune  parser.ml  reporter.ml  resolver.ml  target_expander.ml
scripts/: benchmark.sh
src/: link_verifier.gleam
src/link_verifier/: parser.gleam  resolver.gleam
test/: dune  test_cli.ml  test_parser.ml  test_resolver.ml
test/.tmp_cli/: solo.md
test/link_verifier/: cli_test.gleam  parser_test.gleam
